fix cards description overflow scenario

--- a/assets/styles/todo.css
+++ b/assets/styles/todo.css
@@ -1,12 +1,11 @@
 .card {
   width: 300px;
-  height: 150px;
+  height: 140px;
   background-color: var(--neutral-white-color);
   box-shadow: 10px 10px var(--secondary-color);
-  padding: 10px;
+  padding: 10px 20px;
   position: relative;
   border: 1px solid var(--neutral-black-color);
-  overflow: hidden;
   transition: transform 0.1s ease-in-out, box-shadow 0.1s ease-in-out;
 }
 
@@ -24,6 +23,11 @@
   font-size: 24px;
   text-align: center;
   margin-bottom: 10px;
+}
+
+.card__description {
+  /* overflow: hidden;
+  text-overflow: ellipsis; */
 }
 
 .card__expand-action {
